# QualityControl

./: .clang-format  .clang-format-ignore  .cmake-format.py  .cmake-format.yaml  .codecov.yml  .cproject  .gitignore  .project  .travis.yml  Activity_8h.html  Activity_8h__dep__incl.map  Activity_8h__dep__incl.md5  Activity_8h_source.html  AdvancedWorkflow_8cxx.html  AdvancedWorkflow_8cxx.js  AdvancedWorkflow_8cxx__incl.map  AdvancedWorkflow_8cxx__incl.md5  AdvancedWorkflow_8h.html  AdvancedWorkflow_8h.js  AdvancedWorkflow_8h__dep__incl.map  AdvancedWorkflow_8h__dep__incl.md5  AdvancedWorkflow_8h__incl.map  AdvancedWorkflow_8h__incl.md5  AdvancedWorkflow_8h_source.html  AggregatorInterface_8h.html  AggregatorInterface_8h__dep__incl.map  AggregatorInterface_8h__dep__incl.md5  AggregatorInterface_8h__incl.map  AggregatorInterface_8h__incl.md5  AggregatorInterface_8h_source.html  AggregatorRunnerFactory_8cxx.html  AggregatorRunnerFactory_8cxx__incl.map  AggregatorRunnerFactory_8cxx__incl.md5  AggregatorRunnerFactory_8h.html  AggregatorRunnerFactory_8h__dep__incl.map  AggregatorRunnerFactory_8h__dep__incl.md5  AggregatorRunnerFactory_8h__incl.map  AggregatorRunnerFactory_8h__incl.md5  AggregatorRunnerFactory_8h_source.html  AggregatorRunner_8cxx.html  (+2869 more)
Framework/: .CMakeLists.txt.swp  CMakeLists.txt  Print.json  PrintTest.json  QCGeneral.json  SimpleDS.json  advanced-aggregator.json  advanced-external-histo.json  advanced.json  alfa.json  basic-aggregator.json  basic-external-histo.json  basic-functional.json.in  basic-late-task.json  basic-latetask-async.json  basic-latetask.json  basic-no-sampling.json  basic.json  basic2.json  batch-test.json.in  config.json  dataDump.json  dataSamplingConfig.ini  example-default.ini  example-default.json  general.json  multiNode.json  multinode-test.json.in  postprocessing-async.json  postprocessing.json  qcTaskDplConfig.ini  qcTaskDplConfig.json  readout-no-sampling.json  readout.json  readoutChainTemplate.json  readoutDataSampling.json  readoutForDataDump.json  streamerinfos.root  streamerinfos_v017.root  tpcQCPID.json
Framework/proto/: events.proto
Framework/script/: .gitignore  1_per_hour.py  Ccdb.py  ccdb_benchmark.sh  config.yaml  createPatch.sh  o2-qc-batch-test.sh  o2-qc-benchmark-tasks.sh  o2-qc-benchmark.sh  o2-qc-functional-test.sh  o2-qc-multinode-test.sh  patch.sh  qcDatabaseSetup.sh  release.sh  remotePortMapping.csv  repoCleaner.py  repo_benchmark.sh  updateCcdbConsul.sh  updatePdpBeam.sh  updateRemotePorts.sh  updateStagingNodes.sh
Framework/src/: .runQCGeneral.cxx.swp  Activity.cxx  ActivityHelpers.cxx  Actor.cxx  ActorHelpers.cxx  AdvancedWorkflow.cxx  Aggregator.cxx  AggregatorInterface.cxx  AggregatorRunner.cxx  AggregatorRunnerFactory.cxx  AlfaReceiverForTests.cxx  Bookkeeping.cxx  BookkeepingQualitySink.cxx  Calculators.cxx  CcdbApi.cxx  CcdbBenchmark.cxx  CcdbBenchmark.h  CcdbDatabase.cxx  Check.cxx  CheckInterface.cxx  CheckRunner.cxx  CheckRunnerFactory.cxx  Checker.cxx  CheckerDataProcessor.cxx  CheckerDataProcessorFactory.cxx  CheckerFactory.cxx  ClientDataProvider.cxx  CommonInterface.cxx  ConfigParamGlo.cxx  Consumer.cxx  CtpScalers.cxx  CustomParameters.cxx  Data.cxx  DataAdapters.cxx  DataDump.cxx  DataDumpGui.cxx  DataHeaderHelpers.cxx  DataProcessorAdapter.cxx  DataProducer.cxx  DataProducerExample.cxx  (+139 more)
Framework/test/: testActivity.cxx  testActivityHelpers.cxx  testActor.cxx  testActorCallbacks.cxx  testActorHelpers.cxx  testActorTraits.cxx  testAggregatorInterface.cxx  testAggregatorRunner.cxx  testBookkeepingQualitySink.cxx  testCcdbApi.cxx  testCcdbDatabase.cxx  testCcdbDatabaseExtra.cxx  testCheck.cxx  testCheckInterface.cxx  testCheckRunner.cxx  testCheckWorkflow.cxx  testCheckWorkflow.json  testChecker.cxx  testCommonInterface.cxx  testCustomParameters.cxx  testData.cxx  testDataHeaderHelpers.cxx  testDataProcessorAdapter.cxx  testDbFactory.cxx  testEmptyConfig.json  testFlagHelpers.cxx  testInfrastructureGenerator.cxx  testKafkaConsumer.cxx  testKafkaPoller.cxx  testKafkaTests.cxx  testMonitorObject.cxx  testMonitorObjectCollection.cxx  testObjectsManager.cxx  testOnlyTaskConfig.json  testPolicyManager.cxx  testPostProcessingConfig.cxx  testPostProcessingInterface.cxx  testPostProcessingRunner.cxx  testPtreeUtils.cxx  testPublisher.cxx  (+28 more)
Modules/: CMakeLists.txt  ITSDLPQCTask  README.md  modulesHelper.sh  o2-qc-module-configurator.sh
Modules/Benchmark/: CMakeLists.txt
Modules/CPV/: CMakeLists.txt
Modules/CTP/: CMakeLists.txt  basic-ctp.json
Modules/Common/: CMakeLists.txt
Modules/Daq/: CMakeLists.txt  daq.json
Modules/Dummy/: CMakeLists.txt
Modules/EMCAL/: CMakeLists.txt  doxymodules.h
Modules/Example/: CMakeLists.txt  o2-qc-example-analysis-derived.json  o2-qc-example-analysis-direct.json
apps/: CMakeLists.txt  TaskLauncher.cxx  TaskLauncher.h  signalUtilities.h  taskLauncher.cxx
doc/: Advanced.md  CMakeLists.txt  Configuration.md  DevelopersTips.md  FAQ.md  FLPsuite.md  Framework.md  Miscellaneous.md  ModulesDevelopment.md  PostProcessing.md  QC.vsdx  QCDB.md  QuickStart.md  ReleaseNotesTemplate.md  benchmark-repo.md  ccdb_notes.txt  documentation-config.doxygen.in  doxyfile.in  technical-overview.dox  user-guide.dox  welcome.dox
src/: AlfaPublisher.cxx  AlfaPublisherBackend.cxx  AlfaReceiverForTests.cxx  CMakeLists.txt  CheckInterface.cxx  Checker.cxx  Consumer.cxx  DatabaseFactory.cxx  ExampleTask.cxx  MockPublisher.cxx  MockPublisherBackend.cxx  MonitorObject.cxx  MySqlDatabase.cxx  NonEmpty.cxx  ObjectsManager.cxx  Publisher.cxx  PublisherBackendInterface.cxx  PublisherInterface.cxx  Quality.cxx  SpyDevice.cxx  SpyMainFrame.cxx  TaskControl.cxx  TaskDevice.cxx  TaskFactory.cxx  TaskInterface.cxx  alfaTestReceiver.cxx  mainAlfaReceiver.cxx  qcCheckerLauncher.cxx  qcSpy.cxx  qcTaskLauncher.cxx  taskLauncher.cxx
test/: CMakeLists.txt  Checker_test.cpp  MonitorObject_test.cpp  QCTask_test.cpp  TestHello.cpp  TestHello.cxx  testDbFactory.cxx  testHello.cxx  testMonitorObject.cxx  testNonEmpty.cxx  testPublisher.cxx  testQCTask.cxx  testQcInfoLogger.cxx  testQuality.cxx
(+2041 files in other folders)
